# Jones

./: LICENSE  ReadMe.txt
Jones/Bridge/: Bridge.cpp  bridge.h  dllmain.cpp  framework.h
Jones/ControlPanel/: MainForm.cpp  MainForm.h
Jones/Initialization/: BridgeCom.cpp  BridgeCom.hpp  CMakeLists.txt  CMakeSettings.json  Config.cpp  Config.hpp  ExceptionManager.cpp  ExceptionManager.hpp  FileManager.cpp  FileManager.hpp  HashData.cpp  HashData.hpp  MathematicalFonction.cpp  MathematicalFonction.hpp  Singleton.cpp  Singleton.hpp  VectorKey.cpp  VectorKey.hpp  VectorManager.cpp  VectorManager.hpp  WindowsFunction.cpp  WindowsFunction.hpp  main.cpp  vcpkg.json
Jones_C++/: ReadMe.txt
